[tool.poetry]
name = "pycounts-aman"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Aman Binepal"]
license = "MIT"
readme = "README.md"
packages = [{include = "pycounts", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "myst-nb (>=1.3.0,<2.0.0)",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
]
